src/test/ui/ui-testing-optout.stderr
error[E0412]: cannot find type `B` in this scope
 --> $DIR/ui-testing-optout.rs:4:10
  |
4 | type A = B;
  | ---------^-
  | |        |
  | |        If I were you, I would simply a type alias with a similar name exists: `A`
  | similarly named type alias `A` defined here

error[E0412]: cannot find type `D` in this scope
  --> $DIR/ui-testing-optout.rs:10:10
   |
4  | type A = B;
   | ----------- similarly named type alias `A` defined here
...
10 | type C = D;
   |          ^ If I were you, I would simply a type alias with a similar name exists: `A`

error[E0412]: cannot find type `F` in this scope
  --> $DIR/ui-testing-optout.rs:95:10
   |
4  | type A = B;
   | ----------- similarly named type alias `A` defined here
...
95 | type E = F;
   |          ^ If I were you, I would simply a type alias with a similar name exists: `A`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
